# ops-math

./: .clang-format  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG_en.md  CMakeLists.txt  CONTRIBUTING.md  CONTRIBUTING_en.md  OAT.xml  QUICKSTART.md  QUICKSTART_en.md  README.md  README_en.md  SECURITY.md  SECURITY_en.md  Third_Party_Open_Source_Software_List.yaml  Third_Party_Open_Source_Software_Notice  build.sh  classify_rule.yaml  install_deps.sh  requirements.txt  version.cmake  version.info
examples/fast_kernel_launch_example/: CMakeLists.txt  Dockerfile  README.md  build_and_test.sh  requirements.txt  setup.py
examples/fast_kernel_launch_example/ascend_ops/: __init__.py  ops.py
examples/fast_kernel_launch_example/cmake/: ascend.cmake  func.cmake
examples/fast_kernel_launch_example/csrc/: extension.cpp
experimental/: CMakeLists.txt  README.md
experimental/add_example/examples/: test_aclnn_add_example.cpp
experimental/add_example/op_host/: CMakeLists.txt  add_example_def.cpp  add_example_infershape.cpp
experimental/add_example/op_kernel/: add_example.cpp  add_example.h  add_example_tiling_data.h
experimental/add_example_aicpu/examples/: test_aclnn_add_example.cpp
experimental/add_example_aicpu/op_graph/: add_example_proto.h
experimental/add_example_aicpu/op_host/: CMakeLists.txt  add_example_def.cpp
experimental/conversion/as_strided/: CMakeLists.txt  README.md
experimental/conversion/broadcast_v2/: README.md
experimental/conversion/clip_by_value_v2/: CMakeLists.txt  README.md
experimental/conversion/col2_im/: README.md
experimental/conversion/concat_v2/: README.md
experimental/conversion/fill/: CMakeLists.txt  README.md
experimental/conversion/fill_v2/: README.md
experimental/conversion/im2_col/: README.md
experimental/conversion/pack_v2/: README.md
experimental/conversion/slice_v3/: README.md
experimental/conversion/split/: CMakeLists.txt  README.md
experimental/conversion/split_v/: CMakeLists.txt  README.md
experimental/conversion/tensor_move/: CMakeLists.txt  README.md
experimental/conversion/transposev/: README.md
experimental/conversion/view_copy/: CMakeLists.txt  README.md
experimental/conversion/zeros_like/: CMakeLists.txt  README.md
experimental/fast_kernel_launch_example/: CMakeLists.txt  README.md  setup.py
experimental/fast_kernel_launch_example/ascend_ops/: ops.py
experimental/math/abs/: CMakeLists.txt  README.md
experimental/math/accumulate_nv2/: CMakeLists.txt  README.md
experimental/math/accumulate_nv2_v2/: CMakeLists.txt  README.md
experimental/math/acos/: CMakeLists.txt  README.md
experimental/math/acos_grad/: CMakeLists.txt
experimental/math/acos_v2/: CMakeLists.txt
experimental/math/acosh/: CMakeLists.txt  README.md
experimental/math/add_mat_mat_elements/: CMakeLists.txt  README.md
experimental/math/addcdiv/: CMakeLists.txt  README.md
experimental/math/addcmul/: CMakeLists.txt  README.md
experimental/math/approximate_equal/: CMakeLists.txt  README.md
experimental/math/arange/: CMakeLists.txt  README.md
experimental/math/asin_grad/: CMakeLists.txt  README.md
experimental/math/asin_with_agent/: CMakeLists.txt  README.md
experimental/math/asinh/: CMakeLists.txt  README.md
experimental/math/asinh_grad/: CMakeLists.txt  README.md
experimental/math/asinh_v2/: CMakeLists.txt  README.md
experimental/math/asinh_with_agent/: CMakeLists.txt  README.md
experimental/math/atan/: README.md
experimental/math/atan_grad/: CMakeLists.txt  README.md
experimental/math/atanh/: CMakeLists.txt  README.md
experimental/math/axpy_v2/: CMakeLists.txt  README.md
experimental/math/axpy_v3/: README.md
experimental/math/bias_add/: CMakeLists.txt  README.md
experimental/math/bincount/: CMakeLists.txt  README.md
experimental/math/bitwise_and/: CMakeLists.txt  README.md
experimental/math/bitwise_not/: CMakeLists.txt  README.md
experimental/math/cast/: CMakeLists.txt  README.md
experimental/math/cast_v2/: README.md
experimental/math/cdist_grad/: CMakeLists.txt  README.md
experimental/math/complex_v3/: README.md
experimental/math/cos/: CMakeLists.txt  README.md
experimental/math/cosh/: README.md
experimental/math/cosh_v2/: README.md
experimental/math/cross/: README.md
experimental/math/div_v2/: README.md
experimental/math/div_v3/: README.md
experimental/math/eltwise/: README.md
experimental/math/equal/: CMakeLists.txt  README.md
experimental/math/erf/: CMakeLists.txt  README.md
experimental/math/erf_inv/: CMakeLists.txt
experimental/math/exp/: CMakeLists.txt  README.md
experimental/math/expandv/: README.md
experimental/math/eye_v2/: README.md
experimental/math/floor/: CMakeLists.txt  README.md
experimental/math/floor_div/: CMakeLists.txt  README.md
experimental/math/floor_mod/: README.md
experimental/math/fresnel_cos/: CMakeLists.txt  README.md
experimental/math/fresnel_sin/: CMakeLists.txt  README.md
experimental/math/fused_mul_add_n/: .gitignore  README.md
experimental/math/gcd/: CMakeLists.txt  README.md
experimental/math/ger_v2/: README.md
experimental/math/greater/: CMakeLists.txt  README.md
experimental/math/greater_equal/: CMakeLists.txt  README.md
experimental/math/inv/: CMakeLists.txt  README.md
experimental/math/inv_grad/: CMakeLists.txt  README.md
experimental/math/is_close/: CMakeLists.txt  README.md
experimental/math/is_finite/: README.md
experimental/math/is_neg_inf/: CMakeLists.txt  README.md
experimental/math/is_pos_inf/: CMakeLists.txt  README.md
experimental/math/isin_part_v1/: CMakeLists.txt  README.md
experimental/math/lerp/: CMakeLists.txt  README.md
experimental/math/less/: CMakeLists.txt  README.md
experimental/math/log/: README.md
experimental/math/log1p_v2/: README.md
experimental/math/log_add_exp/: README.md
experimental/math/log_space/: CMakeLists.txt
experimental/math/mod/: README.md  (+1 more)
experimental/npu_ops_math_ext/: CMakeLists.txt  README.md  setup.py
experimental/random/: CMakeLists.txt
math/radix_top_k/: CMakeLists.txt  README.md
tests/ut/: CMakeLists.txt
(+10908 files in other folders)
